# kyoot

./: Cargo.toml  README.md  rustfmt.toml
crates/foxy/: Cargo.toml
crates/foxy/src/: lexer.rs  lib.rs  parser.rs
kyoot/: example.ky  test.ky
src/: main.rs
