[package]
name = "foxy_cli"
description = "Cli for the Kyoot language compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
license-file.workspace = true

[dependencies]
foxy = { path = "crates/foxy"}

[workspace]
members = [
    "crates/foxy"
]

[workspace.package]
authors = ["Luna Amora <luna.mberry@gmail.com>"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
