[package]
name = "foxy_cli"
description = "Cli for the Kyoot language compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
license-file.workspace = true

[dependencies]
foxy = { path = "crates/foxy"}
clap = { version = "4.1.8", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
tracing-subscriber = "0.3.16"
tracing-log = "0.1.3"
tracing = "0.1.37"
anyhow = "1.0.69"

[workspace]
members = [
    "crates/foxy"
]

[workspace.package]
authors = ["Luna Amora <luna.mberry@gmail.com>"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
