[package]
name = "foxy"
description = "Compiler for the Kyoot language"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
license-file.workspace = true

[dependencies]
ariadne = { version = "0.2.0", features = ["auto-color"] }
chumsky = "0.9.2"
tracing = "0.1.37"
anyhow = "1.0.69"
